# Fine-Tune-Bert-for-Spam

./: .dockerignore  .env.production  .gitignore  Dockerfile  Final_Code.ipynb  Projet.ipynb  README.md  app.py  change_password.sql  check_dependencies.py  create_test_user.py  docker-compose.yaml  entrypoint.sh  final.ipynb  generate_api_key.py  generate_jwt_secret.py  logs  main.py  model_loader.py  pg_hba.conf  pyproject.toml  requirements.txt  sendmail_integration.py  test_backend.py
alembic/: env.py
backend/: app.py
backend/database/: database.py  init_db.py
backend/ml/: model_loader.py
backend/models/: models.py
backend/services/: email_processor.py
config/: alembic.ini
config/alembic/versions/: 20512d836a91_create_users_table.py  e2897675e2ac_add_email_model_and_relationships.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/spline/: resume.docx  scene.spline
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Dashboard.tsx  EmailComposer.tsx  EmailList.tsx  EmailView.tsx  EmptyStateDemo.tsx  ErrorBoundary.tsx  Home.tsx  Login.tsx  NeonBackground.tsx  Profile.tsx  Register.tsx  Settings.tsx  Signup.tsx  SplineBackground.tsx
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: use-emails.ts  use-toast.ts
frontend/src/services/: api.ts
frontend/src/types/: spline.d.ts
frontend2/: index.html  package-lock.json  package.json  tailwind.config.js
frontend2/src/: App.tsx
frontend2/src/components/: Features.tsx  Footer.tsx  Header.tsx  (+4 more)
(+15 files in other folders)
